@@ -247,8 +247,8 @@ ldns_rdf2buffer_str_dname(ldns_buffer *output, const ldns_rdf *dname)
 				/* paranoia check for various 'strange' 
 				   characters in dnames
 				*/
-				if (data[src_pos] == '.' ||
-				    data[src_pos] == '(' || data[src_pos] == ')') {
+				if(data[src_pos]=='.' || data[src_pos]==';' ||
+				   data[src_pos]=='(' || data[src_pos]==')') {
 					ldns_buffer_printf(output, "\\%c", 
 							data[src_pos]);
 				} else if (!isgraph((int) data[src_pos])) {
